fix(deps): update mockito (#3222)
* fix(deps): update mockito
* refactor(test): migrate ApplicationInstallerExtTest to JUnit5
* chore(web-server): include junit engines
* test dep declaration